Finish all three html pages

--- a/Lab2/Login.html
+++ b/Lab2/Login.html
@@ -11,22 +11,22 @@
 <div>
 <body>
     <div>
-    <img src="IBU_logo_reb-02-01.png" style="width: 10%; height: 10%;">
+    <img src="IBU_logo_reb-02-01.png" style="width: 8%; height: 8%;">
     <h3>International Burch University</h3>
     <h2>Login page</h2>
     <p>Welcome.</p>
     <p>Please Login</p>
     </div>
-    <div  style="display:flex; justify-content: center;">
+    <div style="display:flex; justify-content: center;">
     <form>
         <label for="email"><b>Email</b></label><br>
         <input type="text" id="emal" name="email" placeholder="Enter your email"><br><br>
         <label for="pass"><b>Password</b></label><br>
         <input type="password" id="pass" name="pass" placeholder="Enter your password"><br><br>
-        <p style="text-align: center;">Don't have an account? <span><a target="_blank" href="Registration.html"><u>Register NOW</u></a></span></p>
-        <p style="text-align: center;">Forgot your password?</p>
+        <p style="text-align: center;">Don't have an account? <span><a target="_self" href="Registration.html"><u>Register NOW</u></a></span></p>
+        <p style="text-align: center;"><a href="Password.html" target="_self">Forgot your password?</a></p>
         <div style="border: 1px solid black; text-align: center;">
-        <h1>SUBMIT</h1>
+        <h1><a href="courses.html" target="_self">SUBMIT</a></h1>
         </div>
     </form>
 </div>
