--- a/Lab2/Password.html
+++ b/Lab2/Password.html
@@ -10,7 +10,7 @@
 
 <body>
     <div>
-    <img src="IBU_logo_reb-02-01.png" style="width: 10%; height: 10%;"><br>
+    <img src="IBU_logo_reb-02-01.png" style="width: 8%; height: 8%;"><br>
     <h3>International Burch University</h3>
    </div>
     <h1>Forgot password</h1>
@@ -19,7 +19,7 @@
     <label for="pass1"><b>New password</b></label><br>
     <input type="password" id="pass1" name="pass1" placeholder="Enter your password"><br><br>
     <input type="password" id="pass2" name="pass2" placeholder="Repeat the password"><br><br>
-    <div style="border: 1px solid black">
+    <div style="border: 1px solid black; display: flex; justify-content: center;" >
         <h1><a target="_blank" href="Login.html">CREATE NEW PASSWORD</a></h1>
     </div>
 
