--- a/Lab2/courses.html
+++ b/Lab2/courses.html
@@ -6,47 +6,37 @@
     <title>Courses</title>
 
     <style>
+      td, th{
 
-        td, th{
-              border: 1px solid black ;
-              text-align: left;
-              padding: 8px;
-        }
-        </style>
+          text-align: left;
+          padding: 8px;
+      }
+    </style>
 
 
 </head>
 <body>
 
-    <img src="IBU_logo_reb-02-01.png" style="width: 10%; height: 10%;">
+    <img src="IBU_logo_reb-02-01.png" style="width: 25%; height: 25%;">
     <h2 style="color: rgb(8, 37, 83);">Welcome back dear student!</h2>
 
-    <table>
-  <tr>
-    <th>First Name</th>
-    <th>Last Name</th>
+    <table style="border: 2px solid black; border-collapse: collapse;">
+      <tr style="border: 2px solid black; border-collapse: collapse;">
+        <th style="border: 2px solid black; border-collapse: collapse;" ><b>Course Code</b></th>
+        <th style="border: 2px solid black; border-collapse: collapse;"><b>Course Name</b></th>
+        <th style="border: 2px solid black; border-collapse: collapse;"><b>ETCS</b></th>
+      </tr>
+      <tr style="border: 2px solid black; border-collapse: collapse;">
+        <td style="border: 2px solid black; border-collapse: collapse;">FENMS 035</td>
+        <td style="border: 2px solid black; border-collapse: collapse;">Foundations of Frontend <br>Web Development</td>
+        <td style="border: 2px solid black; border-collapse: collapse;">5.0</td>
+      </tr>
+      <tr style="border: 2px solid black; border-collapse: collapse;">
+        <td style="border: 2px solid black; border-collapse: collapse;">IT 101</td>
+        <td style="border: 2px solid black; border-collapse: collapse;">Database Design and <br> Implementation</td>
+        <td style="border: 2px solid black; border-collapse: collapse;">6.0</td>
+      </tr>
+    </table>
 
-  </tr>
-  <tr>
-    <td>Enter First Name</td>
-    <td>Enter Last Name</td>
-
-  </tr>
-  <tr>
-    <td>Username</td>
-    <td>...</td>
-
-  </tr>
-  <tr>
-    <td>Password</td>
-    <td>...</td>
-
-  </tr>
-  <tr>
-    <td>Date of birth</td>
-    <td>...</td>
-
-  </tr>
-</table>
 </body>
 </html>
