--- a/Lab2/Registration.html
+++ b/Lab2/Registration.html
@@ -5,49 +5,97 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration Form</title>
-    <style>
 
-    td{
-          border: 1px solid black;
-          text-align: left;
-          padding: 8px;
-    }
 
-    th{
-      text-align: left;
-      padding: 8px;
-    }
-        
-    </style>
 </head>
 <body>
+
+    <img src="IBU_logo_reb-02-01.png" style="width: 8%; height: 8%;">
+    <h3>International Burch University</h3>
     <h1>REGISTRATION FORM</h1>
+
 <table>
   <tr>
-    <th>First Name</th>
-    <th>Last Name</th>
-
+    <td style="text-align: left;">First Name:</td>
+    <td style="text-align: left;">Last Name:</td>
   </tr>
-  <tr>
-    <td>Enter First Name</td>
-    <td>Enter Last Name</td>
 
+  <tr>
+    <td><input type="text" id="name" name="name" placeholder="Enter name"></td>
+    <td><input type="text" id="lname" name="lname" placeholder="Enter last name"></td>
   </tr>
-  <tr>
-    <td>Username</td>
-    <td>...</td>
 
+  <tr>
+    <td style="text-align: left;">Username:</td>
+    <td><input type="text" id="uname" name="uname"></td>
   </tr>
-  <tr>
-    <td>Password</td>
-    <td>...</td>
 
+  <tr>
+    <td style="text-align: left;">Password:</td>
+    <td><input type="password" id="pass" name="pass"></td>
   </tr>
-  <tr>
-    <td>Date of birth</td>
-    <td>...</td>
 
+  <tr>
+    <td>Date of birth:</td>
+    <td><input type="date" id="dob" name="dob"></td>
+  </tr>
+
+  <tr>
+    <td>Place of birth:</td>
+    <td><input type="text" id="place" name="place"></td>
+  </tr>
+
+  <tr>
+    <td></td>
+    <td><input type="radio" id="gender" name="gender" value="Male">
+      <label for="html">Male</label><br></td>
+  </tr>
+
+  <tr>
+    <td>Gender:</td>
+    <td><input type="radio" id="gender" name="gender" value="Female">
+      <label for="html">Female</label><br></td></td>
+  </tr>
+
+  <tr>
+    <td></td>
+    <td><input type="radio" id="gender" name="gender" value="Other">
+      <label for="html">Other</label><br></td>
+  </tr>
+
+  <tr>
+    <td style="text-align: left;">Email:</td>
+    <td><input type="text" id="email" name="email"></td>
+  </tr>
+
+  <tr>
+    <td style="text-align: left;">Phone number:</td>
+    <td><input type="number" id="num" name="num"></td>
+  </tr>
+
+  <tr>
+    <td style="text-align: left;">Hair color:</td>
+    <td><input type="color" id="hcolor" name="hcolor" value="#fffff"></td>
+  </tr>
+
+  <tr>
+    <td style="text-align: left;">Notes:</td>
+    <td></td>
+  </tr>
   </tr>
 </table>
+
+<textarea id="notes" name="notes" rows="10" cols="50"></textarea><br>
+
+<input type="checkbox" id="vehicle1" name="vehicle1" value="Yes">
+<label for="vehicle1">Recieve notifications</label><br><br>
+
+<table>
+<tr>
+  <td></td>
+  <td><button type="button" >Register</button></td>
+</tr>
+</table>
+
 </body>
 </html>
