Lab 2 work done & lab 3 started

--- a/Lab2/Password.html
+++ b/Lab2/Password.html
@@ -4,7 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Forgot password</title>
+
+    <style>
+
+        table{
+            border: 2px solid white;
+            border-collapse: collapse;
+        }
+  
+        tr,td,th{
+  
+            border: 2px solid white;
+            text-align: left;
+            padding: 8px;
+        }
+  
+      </style>
+
 </head>
 
 
@@ -19,7 +37,7 @@
     <label for="pass1"><b>New password</b></label><br>
     <input type="password" id="pass1" name="pass1" placeholder="Enter your password"><br><br>
     <input type="password" id="pass2" name="pass2" placeholder="Repeat the password"><br><br>
-    <div style="border: 1px solid black; display: flex; justify-content: center;" >
+    <div class="submit" style="border: 1px solid black; display: inline-block; justify-content: center;" >
         <h1><a target="_blank" href="Login.html">CREATE NEW PASSWORD</a></h1>
     </div>
 
