--- a/Lab2/Login.html
+++ b/Lab2/Login.html
@@ -5,7 +5,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>Login Form</title>
+
+    <style>
+
+        table{
+            border: 2px solid white;
+            border-collapse: collapse;
+        }
+  
+        tr,td,th{
+  
+            border: 2px solid white;
+            text-align: left;
+            padding: 8px;
+        }
+  
+      </style>
+
 </head>
 
 <div>
@@ -25,7 +46,7 @@
         <input type="password" id="pass" name="pass" placeholder="Enter your password"><br><br>
         <p style="text-align: center;">Don't have an account? <span><a target="_self" href="Registration.html"><u>Register NOW</u></a></span></p>
         <p style="text-align: center;"><a href="Password.html" target="_self">Forgot your password?</a></p>
-        <div style="border: 1px solid black; text-align: center;">
+        <div class="submit" style="border: 1px solid black; text-align: center;">
         <h1><a href="courses.html" target="_self">SUBMIT</a></h1>
         </div>
     </form>
