--- a/Lab2/Registration.html
+++ b/Lab2/Registration.html
@@ -4,20 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Registration Form</title>
 
-
 </head>
+
 <body>
 
     <img src="IBU_logo_reb-02-01.png" style="width: 8%; height: 8%;">
     <h3>International Burch University</h3>
     <h1>REGISTRATION FORM</h1>
-
+<div class="regtable" style="display: inline-block; text-align: left;">
 <table>
   <tr>
-    <td style="text-align: left;">First Name:</td>
-    <td style="text-align: left;">Last Name:</td>
+    <td>First Name:</td>
+    <td>Last Name:</td>
   </tr>
 
   <tr>
@@ -26,12 +27,12 @@
   </tr>
 
   <tr>
-    <td style="text-align: left;">Username:</td>
+    <td>Username:</td>
     <td><input type="text" id="uname" name="uname"></td>
   </tr>
 
   <tr>
-    <td style="text-align: left;">Password:</td>
+    <td>Password:</td>
     <td><input type="password" id="pass" name="pass"></td>
   </tr>
 
@@ -64,22 +65,22 @@
   </tr>
 
   <tr>
-    <td style="text-align: left;">Email:</td>
+    <td>Email:</td>
     <td><input type="text" id="email" name="email"></td>
   </tr>
 
   <tr>
-    <td style="text-align: left;">Phone number:</td>
+    <td>Phone number:</td>
     <td><input type="number" id="num" name="num"></td>
   </tr>
 
   <tr>
-    <td style="text-align: left;">Hair color:</td>
+    <td>Hair color:</td>
     <td><input type="color" id="hcolor" name="hcolor" value="#fffff"></td>
   </tr>
 
   <tr>
-    <td style="text-align: left;">Notes:</td>
+    <td>Notes:</td>
     <td></td>
   </tr>
   </tr>
@@ -87,15 +88,19 @@
 
 <textarea id="notes" name="notes" rows="10" cols="50"></textarea><br>
 
-<input type="checkbox" id="vehicle1" name="vehicle1" value="Yes">
+<div style="text-align:left">
+<input type="checkbox" id="notif" name="notif" value="Yes">
 <label for="vehicle1">Recieve notifications</label><br><br>
+</div>
 
 <table>
 <tr>
   <td></td>
-  <td><button type="button" >Register</button></td>
+  <td><a href="courses.html" target="_self"><button class="submit" type="button" >Register</button></a></td>
 </tr>
 </table>
+
+</div>
 
 </body>
 </html>
