--- a/Lab2/courses.html
+++ b/Lab2/courses.html
@@ -3,40 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Courses</title>
 
     <style>
-      td, th{
 
+      table{
+          border: 2px solid white;
+          border-collapse: collapse;
+      }
+
+      tr,td,th{
+
+          border: 2px solid white;
           text-align: left;
           padding: 8px;
       }
+
     </style>
 
-
 </head>
+
 <body>
 
     <img src="IBU_logo_reb-02-01.png" style="width: 25%; height: 25%;">
     <h2 style="color: rgb(8, 37, 83);">Welcome back dear student!</h2>
 
-    <table style="border: 2px solid black; border-collapse: collapse;">
-      <tr style="border: 2px solid black; border-collapse: collapse;">
-        <th style="border: 2px solid black; border-collapse: collapse;" ><b>Course Code</b></th>
-        <th style="border: 2px solid black; border-collapse: collapse;"><b>Course Name</b></th>
-        <th style="border: 2px solid black; border-collapse: collapse;"><b>ETCS</b></th>
+    <div style="display: inline-block; text-align: center;">
+    <table style="border-collapse: collapse;">
+      <tr style="border-collapse: collapse;">
+        <th><b>Course Code</b></th>
+        <th><b>Course Name</b></th>
+        <th><b>ETCS</b></th>
       </tr>
-      <tr style="border: 2px solid black; border-collapse: collapse;">
-        <td style="border: 2px solid black; border-collapse: collapse;">FENMS 035</td>
-        <td style="border: 2px solid black; border-collapse: collapse;">Foundations of Frontend <br>Web Development</td>
-        <td style="border: 2px solid black; border-collapse: collapse;">5.0</td>
+      <tr>
+        <td>FENMS 035</td>
+        <td>Foundations of Frontend <br>Web Development</td>
+        <td>5.0</td>
       </tr>
-      <tr style="border: 2px solid black; border-collapse: collapse;">
-        <td style="border: 2px solid black; border-collapse: collapse;">IT 101</td>
-        <td style="border: 2px solid black; border-collapse: collapse;">Database Design and <br> Implementation</td>
-        <td style="border: 2px solid black; border-collapse: collapse;">6.0</td>
+      <tr>
+        <td>IT 101</td>
+        <td>Database Design and <br> Implementation</td>
+        <td>6.0</td>
       </tr>
     </table>
+  </div>
 
 </body>
 </html>
