--- a/Project1/index.html
+++ b/Project1/index.html
@@ -14,6 +14,12 @@
 
       }
 
+      #hero-video{
+
+        opacity: 1;
+
+      }
+
       body {
         font-family: Georgia, 'Times New Roman', Times, serif;
       }
@@ -58,7 +64,6 @@
         background-color: #f9f9f9;
         min-width: 100px;
         box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-        z-index: 1;
       }
       
       .dropdown-content a {
@@ -100,6 +105,14 @@
       <li><a href="">News</a></li>
     </ul>
   </div>
+
+  <div id="hero-video">
+
+  <video src="Videos/Estee Lauder Commercial.mp4" autoplay="autoplay" loop="loop" style="width: 100%; height: 100%;"> </video>
+
+  </div>
   
   </body>
   </html>
+
+  
