--- a/Lab3/index.html
+++ b/Lab3/index.html
@@ -10,21 +10,62 @@
 
 <body>
     
-<div id="headerimg">
+<header style="margin: 0px; padding: 0px;">
     <img src="css-images/img1.png" id="headerpic">
     <p id="title">New Sales Offer</p>
     <img src="css-images/logo (1).png" id="logo">
-</div>
+</header>
 
 <div>
-<p>Dear Alex,<br><br>
+<p class="text">Dear Alex,<br><br>
     Ready for a skincare revolution? We are excited to introduce CLEAN, our new line of
     sustainable skincare products. At Fleure Beauty, we believe in taking care of your skin
-    while also taking care of our planet. That's;s why we have carefully formulated our
+    while also taking care of our planet. That's why we have carefully formulated our
     products using only natural and eco-friendly ingredients.<br><br>
     Our new CLEAN sustainable skincare line includes a range of products to meet your
     skincare needs.</p>
 </div>
+
+<div id="imgcatalog">
+
+    <div>
+    <img src="css-images/img2.png">
+    <p>Freshen up with our gentle cleansers.</p>
+    </div>
+
+    <div>
+    <img src="css-images/img3.png">
+    <p>Nourish your skin with soothing moisturizers.</p>
+    </div>
+
+    <div>
+    <img src="css-images/img4.png">
+    <p>Glow with our lip and cheek tint.</p>
+    </div>
+
+</div>
+
+<div>
+    <p class="text">
+    We are committed to making a positive impact on the world, and our sustainable
+    skincare line is one way we can do that. Join us in our mission to take care of ourselves
+    and our planet.<br><br>
+    <b>Place your order before June 30, 2030 and get a 20% discount voucher for your
+    next purchase.</b><br><br>
+    Feel free to reach out if you have any questions about the new CLEAN skincare line.
+    We look forward to helping you achieve healthy, glowing skin.<br><br>
+    Sincerely,<br>
+    </p>
+</div>
+
+<footer>
+
+    <h3>Fleure Beuty</h3>
+    <p>123 Anywhere Street, Any City, ST 12345</p>
+    <p><b>wwwreallygreatsite.com</b></p>
+    <p>hello@reallygreatwebsite.com</p>
+
+</footer>
 
 </body>
 </html>
