Fixed navbar amd updated carousel

--- a/Project1/index.html
+++ b/Project1/index.html
@@ -16,31 +16,23 @@
       <li class="logo">
         <a href="index.html"><img src="Logo/Logo_2-fixed.png" alt="Logo" style="width: 140px; height: auto;"></a>
       </li>
-      <li class="dropdown">
-        <a href="" class="dropbtn">Shop</a>
-        <div class="dropdown-content">
-          <a href="">Makeup</a>
-          <a href="">Skincare</a>
-          <a href="">Hair</a>
-          <a href="">Fragrances</a>
-        </div>
-      </li>
+      <li><a href="">Shop</a></li>
       <li><a href="">Brands</a></li>
       <li><a href="">Sale</a></li>
       <li><a href="">News</a></li>
     </ul>
   </div>
 
-<div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+ <div id="carousel" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
-      <div class="carousel-item active" data-bs-interval="5000">
-        <img src="Images/hero1.jpg" class="d-block w-100" alt="...">
+      <div class="carousel-item active" data-bs-interval="3000">
+        <a href=""><img src="Images/hero1.jpg" class="d-block w-100" alt="..."></a>
       </div>
       <div class="carousel-item" data-bs-interval="3000">
-        <img src="Images/hero2.jpg" class="d-block w-100" alt="...">
+        <a href=""><img src="Images/hero2.jpg" class="d-block w-100" alt="..."></a>
       </div>
       <div class="carousel-item" data-bs-interval="3000">
-        <img src="Images/hero3.jpg" class="d-block w-100" alt="...">
+        <a href=""><img src="Images/hero3.jpg" class="d-block w-100" alt="..."></a>
       </div>
     </div>
 </div>
