--- a/Project1/index.html
+++ b/Project1/index.html
@@ -16,7 +16,7 @@
       <li class="logo">
         <a href="index.html"><img src="Logo/Logo_2-fixed.png" alt="Logo" style="width: 140px; height: auto;"></a>
       </li>
-      <li><a href="">Shop</a></li>
+      <li><a href="#categories">Shop</a></li>
       <li><a href="">Brands</a></li>
       <li><a href="">Sale</a></li>
       <li><a href="">News</a></li>
@@ -25,18 +25,33 @@
 
  <div id="carousel" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
-      <div class="carousel-item active" data-bs-interval="3000">
-        <a href=""><img src="Images/hero1.jpg" class="d-block w-100" alt="..."></a>
+      <div class="carousel-item active" data-bs-interval="3500">
+        <a href=""><img src="Images/hero1.jpg" class="d-block w-100" alt="TBD Membership"></a>
       </div>
-      <div class="carousel-item" data-bs-interval="3000">
-        <a href=""><img src="Images/hero2.jpg" class="d-block w-100" alt="..."></a>
+      <div class="carousel-item" data-bs-interval="3500">
+        <a href=""><img src="Images/hero2.jpg" class="d-block w-100" alt="Kylie Jenner Cosmic Fragrance"></a>
       </div>
-      <div class="carousel-item" data-bs-interval="3000">
-        <a href=""><img src="Images/hero3.jpg" class="d-block w-100" alt="..."></a>
+      <div class="carousel-item" data-bs-interval="3500">
+        <a href=""><img src="Images/hero3.jpg" class="d-block w-100" alt="Olaplex Deal"></a>
       </div>
     </div>
 </div>
-  
+
+<div class="card">
+  <div class="bg-image hover-overlay" data-mdb-ripple-init data-mdb-ripple-color="light">
+    <img src="Images/product_OlaplexShampoo.jpg" class="img-fluid"/>
+    <a href="#!">
+      <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
+    </a>
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">OLAPLEX</h5>
+    <p class="card-text">No.4 Bond Maintenance Shampoo</p>
+    <a href="#!" class="btn btn-primary" >Button</a>
+  </div>
+</div>
+
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
   </body>
