--- a/Project1/index.html
+++ b/Project1/index.html
@@ -37,19 +37,17 @@
     </div>
 </div>
 
-<div class="card">
-  <div class="bg-image hover-overlay" data-mdb-ripple-init data-mdb-ripple-color="light">
-    <img src="Images/product_OlaplexShampoo.jpg" class="img-fluid"/>
-    <a href="#!">
-      <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
-    </a>
-  </div>
+<div class="card" style="width: 14rem;">
+  <a class="card-link" href="index.html"><img src="Images/Olaplex_Product1.webp" class="card-img-top" alt="...">
   <div class="card-body">
-    <h5 class="card-title">OLAPLEX</h5>
-    <p class="card-text">No.4 Bond Maintenance Shampoo</p>
-    <a href="#!" class="btn btn-primary" >Button</a>
+    <h6 class="card-title text-secondary fw-light">OLAPLEX</h5>
+    <p class="card-text">No 4 - Bond Maintenance Shampoo</p>
+    <p class="card-price">$30.00</p>
   </div>
+</a>
 </div>
+
+
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
