Working on product grid

--- a/Project1/index.html
+++ b/Project1/index.html
@@ -37,14 +37,45 @@
     </div>
 </div>
 
-<div class="card" style="width: 14rem;">
-  <a class="card-link" href="index.html"><img src="Images/Olaplex_Product1.webp" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h6 class="card-title text-secondary fw-light">OLAPLEX</h5>
-    <p class="card-text">No 4 - Bond Maintenance Shampoo</p>
-    <p class="card-price">$30.00</p>
+<div><p style="font-size: 130%;">Trending products<span style="text-decoration: underline;">View all</span></p></div>
+
+<div class="row g-4">
+  <div class="col-md-2">
+    <div class="card" style="width: 14rem;">
+      <a class="card-link" href="index.html">
+        <img src="Images/Olaplex_Product1.webp" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h6 class="card-title text-secondary fw-light">OLAPLEX</h6>
+          <p class="card-text">No 4 - Bond Maintenance Shampoo</p>
+          <p class="card-price">$30.00</p>
+        </div>
+      </a>
+    </div>
   </div>
-</a>
+  <div class="col-md-2">
+    <div class="card " style="width: 14rem;">
+      <a class="card-link" href="index.html">
+        <img src="Images/product2.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h6 class="card-title text-secondary fw-light">Sol de Janerio</h6>
+          <p class="card-text">Cheirosa '62 Hair and Body Mist</p>
+          <p class="card-price">$24.00 - $38.00</p>
+        </div>
+      </a>
+    </div>
+  </div>
+  <div class="col-md-2">
+    <div class="card " style="width: 14rem">
+      <a class="card-link" href="index.html">
+        <img src="Images/product3.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h6 class="card-title text-secondary fw-light">elf</h6>
+          <p class="card-text">Camo Liquid Blush</p>
+          <p class="card-price">$7.00</p>
+        </div>
+      </a>
+    </div>
+  </div>
 </div>
 
 
