--- a/Project1/index.html
+++ b/Project1/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="style.css.map">
+    <link rel="stylesheet" href="style_scss.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>The Beauty Place</title>
 </head>
@@ -209,7 +209,7 @@ font-weight: 500; padding: 30px;">Shop by Category</p>
 
           <div class="col-auto">
  
-            <button data-mdb-ripple-init type="submit" class="btn mb-4" style="background-color: $primary-color;">
+            <button data-mdb-ripple-init type="submit" class="btn mb-4" style="background-color: #bf7b67;">
               Subscribe
             </button>
           </div>
