Added button for theme toggle

--- a/Project1/index.html
+++ b/Project1/index.html
@@ -30,6 +30,7 @@
       <li><a href="#">Brands</a></li>
       <li><a href="#">Sale</a></li>
       <li><a href="memberships.html" target="_self">Membership</a></li>
+      <li><button id="moonButton" style="background: none; border: none;"><img src="Images/moon.svg" alt="Moon" style="width: 49px; height: 40pxx;"></button></li>
     </ul>
   </div>
 
@@ -230,7 +231,7 @@ font-weight: 500; padding: 30px;">Shop by Category</p>
 <script>
   window.onload = function() {
     var myModal = new bootstrap.Modal(document.getElementById('discountModal'), {
-      keyboard: false
+
     });
     myModal.show();
   };
