--- a/Project 2/login.html
+++ b/Project 2/login.html
@@ -7,39 +7,25 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./assets/css/spapp.css">
     <link rel="stylesheet" href="style.css">
-    <title>Sign up</title>
+    <title>Login</title>
 </head>
 <body class="w3-light-grey">
     <div class="w3-bar w3-white w3-border-bottom w3-xlarge">
         <a href="index.html" class="w3-bar-item w3-button w3-text-red w3-hover-red"><b><i class="fa fa-map-marker w3-margin-right"></i>TravelVista</b></a>
-        <a href="#" id="theme-switcher" class="w3-bar-item w3-button w3-right w3-text-grey" onclick="toggleTheme()"><i class="fa fa-adjust"></i></a>
         <a href="citypicker.html" class="w3-bar-item w3-button w3-text-red w3-hover-red w3-large" style="margin-top: 5px;">Random City Picker</a>
-        <a href="login.html" class="w3-bar-item w3-button w3-text-grey w3-large w3-hover-red" style="margin-top: 5px;" id="loginLogoutButton" onclick="handleLoginLogout()">Log in</a>
+        <a href="signuppage.html" class="w3-bar-item w3-button w3-text-grey w3-large w3-hover-red" style="margin-top: 5px;">Sign up</a>
     </div>
 
-    <div class="w3-container" id="signupform" style="margin: 40px;">
-        <h2>Sign up</h2>
-        <p>Easy reservations and payments, exclusive offers and more!</p>
-        <form id="contactForm" method="post">
-          <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="First name" required name="FName"></p>
-          <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Last name" required name="LName"></p>
+    <div class="w3-container" id="loginform" style="margin: 40px;">
+        <h2>Login</h2>
+        <form id="loginForm" method="post">
           <p><input class="w3-input w3-padding-16 w3-border" type="email" placeholder="Email" required name="Email"></p>
           <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Phone number" required name="Phone"></p>
-          <button class="w3-button w3-black w3-padding-large" id="submitbutton" type="button" onclick="submitForm()">Submit</button>
+          <button class="w3-button w3-black w3-padding-large" id="loginButton" type="button" onclick="loginUser()">Log in</button>
         </form>
-      </div>
-
-      <div class="w3-container w3-border" style="margin: 55px; background-color: white; padding: 20px;">
-        <h2 style="text-align: center;">User information</h2>
-        <p style="text-align: center;" id="usermessage">Sign up to see user information</p>
-        <p id="fname"></p>
-        <p id="lname"> </p>
-        <p id="email"></p>
-        <p id="phone"></p>
-        <button class="w3-button w3-red w3-padding-large" id="deleteUserButton" style="display: none;" type="button" onclick="deleteUser()">Delete user</button>
-      </div>
+        <p id="loginMessage" style="color: red; display: none;">User doesn't exist. Please sign up.</p>
+    </div>
 
     <footer class="w3-container w3-center w3-opacity w3-margin-bottom">
         <h5>Find Us On</h5>
@@ -52,6 +38,6 @@
         <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">w3.css</a></p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="login.js"></script>
 </body>
 </html>
